--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: "Franklin Shop Theme"
+title: "Dany Caloni"
 email: danycaloni1@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://danycaloni.com.br" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
@@ -15,9 +15,9 @@ markdown: kramdown
 permalink: pretty
 
 shop:
-  name: "Franklin Shop Theme"
-  phone: "111 222 3333"
-  email: "email@shop-name.com"
+  name: "Dany Caloni"
+  phone: "(11) 96555-5214"
+  email: "danycaloni1@gmail.com"
   customer_accounts_enabled: true
   customer_accounts_optional: true
 
